<resources>
    <!-- page de connexion -->
    <string name="app_name">Just_Move</string>
    <string name="mail">Mail</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="connexion">Connexion</string>
    <string name="continue_invite">Continue en tant qu\'invité</string>
    <string name="creer_compte">Créer un compte</string>

    <!-- page principale -->
    <string name="accueil">Accueil</string>
    <string name="routine">Routine</string>
    <string name="recherche_article">Rechercher un article</string>
    <string name="titre_default">Nom de l article</string>
    <string name="resume_default">Description</string>

    <!-- spinner -->
    <string-array name="liste_type">
        <item>Tout Types</item>
        <item>Video</item>
        <item>Article</item>
        <item>Audio</item>
    </string-array>

    <!-- page de pop-up -->
    <string name="popup_titre_default">Nom de l\'article</string>
    <string name="popup_resume_default">Description</string>
    <string name="popup_texte_default">Je suis le texte. Je suis le texte. Je suis le texte. Je suis le texte. Je suis le texte. Je suis le texte. Je suis le texte. Je suis le texte. Je suis le texte. Je suis le texte. Je suis le texte. Je suis le texte. Je suis le texte. Je suis le texte. Je suis le texte. Je suis le texte. Je suis le texte. Je suis le texte. Je suis le texte. Je suis le texte. Je suis le texte. Je suis le texte. Je suis le texte. Je suis le texte. Je suis le texte. Je suis le texte. Je suis le texte. Je suis le texte. Je suis le texte. Je suis le texte. Je suis le texte. Je suis le texte. Je suis le texte. Je suis le texte. Je suis le texte. Je suis le texte. Je suis le texte. Je suis le texte. Je suis le texte. Je suis le texte. Je suis le texte. Je suis le texte. Je suis le texte. Je suis le texte. Je suis le texte. Je suis le texte. Je suis le texte. Je suis le texte. Je suis le texte. Je suis le texte. Je suis le texte. </string>
    <string name="remplir_champs">Veuillez remplir les champs ci-dessous</string>
    <string name="prenom">Prénom</string>
    <string name="nom">Nom</string>
    <string name="age">Age</string>
    <string name="taille">Taille (cm)</string>
    <string name="poids">Poids (kg)</string>
    <string name="temps_bureau"> Durée bureau quotidienne (en h)</string>
    <string name="channel_id">myCanal</string>
    <string name="channel_title">myTitle</string>
    <string name="channel_text">Je suis le texte</string>
    <string name="continuer">Ou alors, vous pouvez continuer en accès restreint :</string>
    <string name="favori">Favoris</string>
    <string name="tutoriels">Tutoriels</string>
    <string name="deconnexion">Deconnexion</string>
    <string name="parametres">Modifier paramètre utilisateur</string>

</resources>