<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/popup_img_default"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="50dp"
        android:src="@drawable/article_eau_img"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/popup_titre_default" />

    <TextView
        android:id="@+id/popup_titre_default"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:text="@string/popup_titre_default"
        android:textColor="@color/green_logo"
        android:textSize="20sp"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/popup_resume_default"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:text="@string/popup_resume_default"
        android:textColor="@color/gris_clair"
        android:textSize="14dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/popup_img_default" />

    <TextView
        android:id="@+id/popup_texte_default"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:text="@string/popup_texte_default"
        android:textColor="@color/gris_clair"
        android:textSize="11dp"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/popup_resume_default" />

    <ImageView
        android:id="@+id/popup_favori_default"
        android:layout_width="30dp"
        android:layout_height="30dp"

        android:src="@drawable/ic_non_favori"
        app:layout_constraintBottom_toBottomOf="@+id/popup_img_default"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/popup_img_default"
        app:layout_constraintTop_toTopOf="@+id/popup_img_default" />

    <ImageView
        android:id="@+id/popup_croix"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/ic_croix"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>